--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
-    "client": "cd client && npm start"
+    "client": "cd client && npm start",
+    "render_build": "cd client && npm i && npm run build",
+    "render_run": "cd server && npm i && node server.js"
   },
   "keywords": [],
   "author": "",
